src/objects/Customer_Service_Product__c.object
<CustomObject>
    <description>Custom object to mirror standard Product object for customer service to allow more flexible searching than the standard object allows.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assortment_ID__c</fullName>
        <label>Assortment ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assortment__c</fullName>
        <label>Assortment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_ID__c</fullName>
        <label>Business Area ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Name__c</fullName>
        <label>Business Area Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Three_ID__c</fullName>
        <label>Dummy Three ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Three_Name__c</fullName>
        <label>Dummy Three Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <label>Global ID</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lifecycle__c</fullName>
        <label>Lifecycle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Product_Category__c</fullName>
        <label>Logistics Product Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Service_Area__c</fullName>
        <label>Logistics Service Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion__c</fullName>
        <label>Marked for Deletion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nordic_Product__c</fullName>
        <label>Nordic Product</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Article_ID__c</fullName>
        <label>Product/Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_ID__c</fullName>
        <label>Product Group ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level_4_ID__c</fullName>
        <label>Product (Level 4) ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level_4_Name__c</fullName>
        <label>Product (Level 4) Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Hierarchy_Parent__c</fullName>
        <label>Source Hierarchy Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Customer Service Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Business_Area_Name__c</columns>
        <columns>Business_Area_ID__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Group_ID__c</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Assortment__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Assortment_ID__c</columns>
        <columns>Dummy_Three_ID__c</columns>
        <columns>Dummy_Three_Name__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Service Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>